--- a/index.html
+++ b/index.html
@@ -45,14 +45,11 @@
                     </h1>
                     <div class="subheading mb-5">
                         Mississauga, ON · (647) 517-3498 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        <a href="mailto:rudresh_patel@outlook.com">rudresh_patel@outlook.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">I bring a strong foundation in engineering design, data-driven problem-solving, and project management. My experience ranges from optimizing maintenance programs to enhance asset reliability to developing innovative manufacturing solutions and designing sustainable systems. With a proven track record in cross-functional collaboration, technical proficiency in CAD, FEA, and programming, and a passion for driving efficiency and innovation, I aim to create impactful solutions in the engineering field.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
