--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Rudresh Patel</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -49,7 +49,7 @@
                     </div>
                     <p class="lead mb-5">I bring a strong foundation in engineering design, data-driven problem-solving, and project management. My experience ranges from optimizing maintenance programs to enhance asset reliability to developing innovative manufacturing solutions and designing sustainable systems. With a proven track record in cross-functional collaboration, technical proficiency in CAD, FEA, and programming, and a passion for driving efficiency and innovation, I aim to create impactful solutions in the engineering field.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/rudresh-patel/"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
             </section>
@@ -60,11 +60,11 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
+                            <h3 class="mb-0">Reliability Engineer</h3>
+                            <div class="subheading mb-3">Cascades Containerboard Packaging</div>
                             <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2024 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
