--- a/index.html
+++ b/index.html
@@ -62,7 +62,13 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Reliability Engineer</h3>
                             <div class="subheading mb-3">Cascades Containerboard Packaging</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <ul>
+                                <li>Collaborated with maintenance team to create standardized work instructions and part references, achieving a 10% increase in work order completion and annual savings of $50,000 in maintenance costs.</li>
+                                <li>Updated existing facility layout plans in AutoCAD to incorporate a new roll handling conveyor system.</li>
+                                <li>Engineered custom access platforms, safety guarding, and lifts in SOLIDWORKS to support the installation and operation of the new system, ensuring compliance with safety standards.</li>
+                                <li>Trained 30+ operators in Defect Handling and Breakdown Elimination, enhancing team capability and reducing breakdowns by 25%.</li>
+                                <li>Implemented and trained operators on a Clean, Inspect, and Lubricate (CIL) SOP program across Corrugator asset, increasing MTBF by 20% and reducing MTTR by 15% over 12-month period.</li>
+                            </ul>                      
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2024 - Present</span></div>
                     </div>
