--- a/index.html
+++ b/index.html
@@ -72,30 +72,35 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2024 - Present</span></div>
                     </div>
+
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Manufacturing Engineering Intern</h3>
+                            <div class="subheading mb-3">ArcelorMittal Dofasco – Hamilton, ON | May 2022 – August 2023</div>
+                            <ul>
+                                <li>Conducted RCAs to investigate coiler equipment failures, and implemented corrective actions, controls, and training measures to enhance reliability and prevent potential failures.</li>
+                                <li>Led cross-functional team in conducting FMEA to address ongoing issues with automated coil transportation equipment resulting in a reduction of delay rate by 35%.</li>
+                                <li>Developed SQL-based databases and KPI reports to monitor and enhance quality defect rate and yield, leading to a 20% reduction in defects and $1.5 million annual output increase.</li>
+                                <li>Conducted a cycle time study to identify and resolve critical production bottlenecks, improving throughput by 6%.</li>
+                                <li>Updated documentation and communicated changes with production team to ensure product and process quality.</li>
+                                <li>Analyzed asset performance and provided recommendations to key stakeholders for improving manufacturing processes and equipment.</li>
+                            </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                     </div>
+            
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">CAM Machining and Design Intern</h3>
+                            <div class="subheading mb-3">Rakmill Tools and Machines – Mississauga, ON | May 2021 – August 2021</div>
+                            <ul>
+                                <li>Utilized Mastercam to program and set up CNC machines to produce precision components according to engineering drawings and optimizing tool paths for efficiency and accuracy.</li>
+                                <li>Conducted thorough inspections of finished parts using precision measuring instruments to ensure compliance with quality standards.</li>
+                                <li>Implemented process improvements for chip control, including tooling upgrades and fixture modifications, resulting in a 15% reduction in tool wear and improved surface finish.</li>
+                                <li>Performed routine maintenance and troubleshooting of machinery to optimize performance and reduce downtime.</li>
+                            </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
-                    </div>
+            
                 </div>
             </section>
             <hr class="m-0" />
@@ -105,21 +110,12 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">McMaster University</h3>
+                            <div class="subheading mb-3">Bachelor's of Engineering</div>
+                            <div>Mechanical Engineering and Management - Advanced Manufacturing and Mechanics & Design </div>
+                            <p>GPA: 3.7</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
-                    </div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2019 - May 2025</span></div>
                 </div>
             </section>
             <hr class="m-0" />
