--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Reliability Engineer</h3>
-                            <div class="subheading mb-3">Cascades Containerboard Packaging</div>
+                            <div class="subheading mb-3">Cascades Containerboard Packaging | May 2024 – Present</div>
                             <ul>
                                 <li>Collaborated with maintenance team to create standardized work instructions and part references, achieving a 10% increase in work order completion and annual savings of $50,000 in maintenance costs.</li>
                                 <li>Updated existing facility layout plans in AutoCAD to incorporate a new roll handling conveyor system.</li>
@@ -70,7 +70,6 @@
                                 <li>Implemented and trained operators on a Clean, Inspect, and Lubricate (CIL) SOP program across Corrugator asset, increasing MTBF by 20% and reducing MTTR by 15% over 12-month period.</li>
                             </ul>                      
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2024 - Present</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
