--- a/index.html
+++ b/index.html
@@ -133,7 +133,15 @@
                             </h2>
                             <div id="projectOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#projectsAccordion">
                                 <div class="accordion-body">
-                                    <p>Designed a compact plastic shredder for 3D printer waste using a custom gear-driven cutter mechanism. Focused on safety, noise reduction, and ease of maintenance.</p>
+                                    <ul>
+                                        <li>Designed and fabricated a desktop plastic shredder for recycling PET and PLA, achieving a flake size of ≤12.7 mm, meeting project objectives for sustainability and downstream compatibility.</li>
+                                        <li>Developed and evaluated multiple shredder designs using Autodesk Inventor, employing a weighted decision matrix to select an optimal single-shaft shredder design based on cost, simplicity, and shredability.</li>
+                                        <li>Performed torque calculations to determine motor/gearbox requirements, achieving a minimum of 200 N·m to shred PET, validated through lever arm testing with no shaft deformation.</li>
+                                        <li>Conducted material selection using Granta EduPack, choosing AISI 12L14 for the hex shaft and optimizing blade materials for durability and cost efficiency within a $1000 CAD budget.</li>
+                                        <li>Led machining and assembly of critical components, including water jet-cut blades and 3D-printed PLA parts, reducing costs by leveraging scrap metal and personal 3D printing resources.</li>
+                                        <li>Integrated safety features, including a fully enclosed blade housing and emergency stop system, ensuring safe operation and compliance with project safety objectives.</li>
+                                        <li>Collaborated with team to troubleshoot design challenges, such as blade fit issues, through iterative filing and testing, ensuring functional prototype and final product delivery.</li>
+                                    </ul>
                                     <img src="assets/img/shredder.jpg" alt="Plastic Shredder" class="img-fluid rounded mb-3" />
                                 </div>
                             </div>
@@ -143,12 +151,17 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#projectTwo" aria-expanded="false" aria-controls="projectTwo">
-                                    Solar Car Chassis (McMaster Solar Car)
+                                    Solar Car Chassis - McMaster Solar Car
                                 </button>
                             </h2>
                             <div id="projectTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#projectsAccordion">
                                 <div class="accordion-body">
-                                    <p>Contributed to the design and analysis of the carbon fiber chassis for the solar vehicle. Performed FEA on mounting points and designed 3D-printed jigs for bonding.</p>
+                                    <ul>
+                                        <li>Designed and manufactureda multi-occupant chassis and aeroshell that follows American Solar Challenge load cases for front, rear, and side impact to ensure occupant safety.</li>
+                                        <li>Conducted FEA analysis and implemented DFM principles to optimize size and weight of chassis, resulting in $2,200 in cost-savings from materials/manufacturing and 35% reduction in chassis weight.</li>
+                                        <li>Generated 3D weldment model and 2D CAD drawings following GD&T principles using SOLIDWORKS to be sent to a third-party manufacturing firm.</li>
+                                        <li>Collected stress data to determine the lay of carbon fibre sheets on the aeroshell.</li>
+                                    </ul>
                                     <img src="assets/img/solarcar.jpg" alt="Solar Car" class="img-fluid rounded mb-3" />
                                 </div>
                             </div>
@@ -158,12 +171,20 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingThree">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#projectThree" aria-expanded="false" aria-controls="projectThree">
-                                    Better CVS Pill Bottle Cap
+                                    SureGrip Adaptive Kitchen Knife Holder
                                 </button>
                             </h2>
                             <div id="projectThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#projectsAccordion">
                                 <div class="accordion-body">
-                                    <p>Developed a 3D-printable, push-to-open lid that improves accessibility for individuals with dexterity issues. Compatible with standard CVS pill bottle threads.</p>
+                                    <ul>
+                                        <li>Designed and developed the SureGrip Adaptive Kitchen Knife Holder, enabling users with limited grip strength to safely perform cutting tasks, enhancing kitchen accessibility for individuals with limited dexterity.</li>
+                                        <li>Led CAD modelling using Autodesk Inventor Professional 2025 to create a modular, spring-loaded jaw mechanism, accommodating various knife handle sizes with a body-weight-actuated release tab.</li>
+                                        <li>Conducted force analysis to ensure the jaw mechanism required only 18.4 N to open, well below the 268 N available from a 41 kg user, ensuring accessibility for 97% of the target market.</li>
+                                        <li>Selected materials like TPE-SEBS for overmolded grips and ABS/PC for the housing, optimizing for comfort, durability, and food safety while maintaining a $18/unit production cost.</li>
+                                        <li>Prototyped and validated the design through 3D printing and user surveys, confirming superior comfort and cutting effectiveness compared to traditional knife handles for arthritis-affected users.</li>
+                                        <li>Contributed to financial analysis, estimating a $8439 NPV for 3000 units sold annually at $50/unit on Amazon, supporting cost-effective mid-volume production via injection molding and CNC machining.</li>
+                                        <li>Collaborated with team to refine the design based on peer feedback, narrowing the scope from a multi-tool to a single-use knife holder, improving safety and usability.</li>
+                                    </ul>
                                     <img src="assets/img/pillcap.jpg" alt="Pill Bottle Cap" class="img-fluid rounded mb-3" />
                                 </div>
                             </div>
